menu overflow fix

--- a/app/styles/areas/_menu.scss
+++ b/app/styles/areas/_menu.scss
@@ -4,7 +4,7 @@
     align-items: stretch;
     flex-direction: column;
     justify-content: flex-start;
-    overflow: hidden;
+    overflow: auto;
 
     &__section {
         flex: 0 0 auto;
